# Interactive-Motion-Planning

./: .gitignore  LICENSE  README.md  data_analysis.m  log.txt  overall_data_analysis.m
src/expt1/: CMakeLists.txt  Readme.md  package.xml
src/expt1/data/: ae1.txt  ae2.txt  ae3.txt  am1.txt  am2.txt  am3.txt  az1.txt  az2.txt  az3.txt  cc1.txt  cc2.txt  cc3.txt  cc4.txt  cc5.txt  data_analysis.m  jb1.txt  jb2.txt  jb3.txt  jh1.txt  jh2.txt  kl1.txt  kl2.txt  kl3.txt  kl4.txt  kl5.txt  log.txt  log_az1.txt  log_az2.txt  log_jb1.txt  log_jb2.txt  log_jb3.txt  log_vb.txt  ml1.txt  ml2.txt  ml3.txt  ml4.txt  ta1.txt  ta2.txt  ta3.txt  ta4.txt  (+1 more)
src/expt1/src/: Ego_vehicle.py  NV.py  ego_vehicle.py  g920.py  mpc.cpp  planner.cpp  planner1.cpp  spawn_truck.py  stopped_vehicle.py
src/expt1/src/include/: mpc.h  node.h  node1.h
src/expt2/: CMakeLists.txt  Readme.md  package.xml
src/expt2/data/: ae1.txt  ae2.txt  ae3.txt  ae4.txt  ae_collision.txt  am1.txt  am2.txt  am3.txt  az1.txt  az2.txt  az3.txt  cc1.txt  cc2.txt  cc3.txt  cc4.txt  cc5.txt  data_analysis.m  horizon.txt  horizon_ae_collision.txt  horizonae1.txt  horizonae2.txt  horizonae3.txt  horizonae4.txt  horizonam1.txt  horizonam2.txt  horizonam3.txt  horizonaz1.txt  horizonaz2.txt  horizonaz3.txt  horizoncc1.txt  horizoncc2.txt  horizoncc4.txt  horizoncc5.txt  horizonjb1.txt  horizonjb2.txt  horizonjb3.txt  horizonjb4.txt  horizonjh1.txt  horizonjh2.txt  horizonjh3.txt  (+41 more)
src/expt2/src/: NV.py  NV_.py  ego_vehicle.py  jointmpc.cpp  planner2.cpp  stopped_veh.py  stopped_vehicle.py
src/expt2/src/include/: jointmpc.h  node2.h
src/expt3/: CMakeLists.txt  Readme.md  package.xml
src/expt3/data/: data_analysis.m  horizon.txt  log.txt  log1.txt  log_agg_nv.txt  log_ahead.txt  log_av1.txt  log_behind.txt  log_more_interaction.txt  log_sep3_1.txt  log_sep3_2.txt  ta1.txt
src/expt3/src/: NV.py  ego_vehicle.py  imputer.cpp  jointmpc.cpp  planner3.cpp
src/expt3/src/include/: imputer.h  jointmpc.h  node3.h
src/expt4/: CMakeLists.txt  package.xml
src/expt4/data/: ae1.txt  ae2.txt  ae3.txt  am1.txt  am2.txt  am3.txt  am4.txt  az1.txt  az2.txt  az3.txt  az4.txt  az5.txt  az6.txt  cc1.txt  cc2.txt  cc3.txt  cc4.txt  cc5.txt  data_analysis.m  horizon.txt  horizonae1.txt  horizonae2.txt  horizonae3.txt  horizonam1.txt  horizonam2.txt  horizonam3.txt  horizonam4.txt  horizonaz1.txt  horizonaz2.txt  horizonaz3.txt  horizonaz4.txt  horizonaz5.txt  horizonaz6.txt  horizoncc1.txt  horizoncc2.txt  horizoncc3.txt  horizoncc4.txt  horizoncc5.txt  horizonjb1.txt  horizonjb2.txt  (+43 more)
src/expt4/src/: Readme.md  ego_vehicle.py  imputer.cpp  jointmpc.cpp  planner4.cpp  stopped_vehicle.py
src/expt4/src/include/: jointmpc.h
src/expt5/: CMakeLists.txt  Readme.md  package.xml
src/expt5/data/: ae1.txt  ae2.txt  ae3.txt  am1.txt  am2.txt  am3.txt  am4.txt  az1.txt  az2.txt  az3.txt  az4.txt  data_analysis.m  horizon.txt  horizonae1.txt  horizonae2.txt  horizonae3.txt  horizonam1.txt  horizonam2.txt  horizonam3.txt  horizonam4.txt  horizonaz1.txt  horizonaz2.txt  horizonaz3.txt  horizonaz4.txt  horizonjb1.txt  horizonjb2.txt  horizonjb3.txt  horizonjb4.txt  horizonjh1.txt  horizonjh2.txt  horizonjh3.txt  horizonml1.txt  horizonml2.txt  horizonml3.txt  horizonml5.txt  horizonml6.txt  jb1.txt  jb2.txt  jb3.txt  jb4.txt  (+10 more)
src/expt5/src/: g920.py  imputer.cpp  jointmpc.cpp  planner5.cpp  stopped_vehicle.py
src/expt5/src/include/: imputer.h  jointmpc.h  node4.h
